@@ -95,9 +95,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<jvmArguments>
-						--enable-preview
-					</jvmArguments>
 					<layers>
 						<enabled>true</enabled>
 					</layers>
